# homework_reminder

./: pyproject.toml
homeworkbot/: main.py
